--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -31,6 +31,7 @@ button {
 
 input[type="text"] {
     padding: 10px;
+    color: #fff;
     width: 70%;
     background-color: transparent;
     border: 1px solid #565656;
@@ -64,4 +65,14 @@ input[type="text"] {
 .profile-section span {
     color: #a0a0a0;
     text-decoration: none;
+}
+.repositories-section {
+    margin-top: 50px;
+    width: 100%;
+}
+.repositories-section h4 {
+    margin: 12px 0;
+    font-size: 32px;
+    color: #fff;
+    text-align: center;
 }
