--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -81,3 +81,9 @@ hr {
     border: 0.5px solid #565656;
     margin: 20px 0;
 }
+
+.error-message {
+  color: #ff4d4d;
+  margin-top: 10px;
+  font-weight: bold;
+}
